--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>                        
                   </button>
-                  <a class="navbar-brand" id = "nava" href="#">Pádel UPM</a>
+                  <a class="navbar-brand" id = "a" href="#">Pádel UPM</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
-                    <li><a id= "nava" href="#">Inicio</a></li>
-                    <li><a id = "nava" href="#">Servicios</a></li>
-                    <li><a id = "nava" href="instalaciones.html">Instalaciones</a></li>
-                    <li><a id ="reserva" href="#">Reservas</a></li>
+                    <li><a id= "a" href="#">Inicio</a></li>
+                    <li><a id = "a" href="#">Servicios</a></li>
+                    <li><a id = "a" href="instalaciones.html">Instalaciones</a></li>
+                    <li><a id ="a" href="#">Reservas</a></li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a id = "buttonRegistro"><span class="glyphicon glyphicon-user"></span> Registro</a></li>
-                    <li><a id= "buttonLogin"><span id="iconoLogin" class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a id = "aRegistro"><span class="glyphicon glyphicon-user"></span> Registro</a></li>
+                    <li><a id= "aLogin"><span id="iconoLogin" class="glyphicon glyphicon-log-in"></span> Login</a></li>
                   </ul>
                 </div>
               </div>
@@ -191,7 +191,8 @@
                 <div class="col-sm-6">
                     <h2>Entrenamientos personalizados</h2>
                     <p>Si te sientes un campeón, de verdad lo eres o simplemente quieres avanzar rápidamente en la técnica que rodea a este deporte te podemos configurar sesiones de entrenamiento a tu medida con un entrenador personal que se encargará de: </p>
-                    <ul>
+                    <br>
+                    <ul id="lista">
                         <li>Enseñarte la técnica adecuada para mejorar tus golpes.</li>
                         <li>Enseñarte a combinar la potencia con la técnica.</li>
                         <li>Mostrarte como mejorar el rendimiento en equipo.</li>
