--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
                             </div>
                             
                             <div id="dragdrop">
+                                <label>Arrastra la imagen a la caja:</label>
+                                <br>
                                 <img id="drag1" src="img/arrastrar.png" draggable="true" ondragstart="drag(event)">
                                 <br>
                                 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
