--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href=" css/css_index.css"> 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="icon" type="image/png" href="img/escudo2.png" />
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>        
         <script type="text/javascript" src="js/funcionalidad.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
