--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <section>
             <nav class="navbar navbar-inverse">
-              <div class="container-fluid" id = "barranavegacion">
+              <div class="container-fluid" >
                 <div class="navbar-header">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -43,8 +43,8 @@
                     <li><a id ="aReservas" href="#">Reservas</a></li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
-                    <li id="li_registro"><a id = "aRegistro"><span id="iconoRegistro" class="glyphicon glyphicon-user"></span> Registro</a></li>
-                    <li><a id= "aLogin"><span id="iconoLogin" class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                      <li><a id = "aRegistro"><span class="glyphicon glyphicon-user"></span> Registro</a></li>
+                    <li><a id= "aLogin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                   </ul>
                 </div>
               </div>
@@ -138,7 +138,7 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-2">Contraseña:</label>
                                 <div class="col-sm-10">          
-                                    <input type="password" class="form-control" id="pwd_log" placeholder="Introduce contraseña" required>
+                                    <input type="password" class="form-control" id="pwd_log" placeholder="Introduce contraseña"  required>
                                 </div>
                             </div>
                             
